--- a/index.html
+++ b/index.html
@@ -16,6 +16,37 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+  
+ <!-- 3. NUESTROS MÓDULOS - ORDEN CORREGIDO -->
+<!-- PRIMERO: Configuración base -->
+<script src="config.js"></script> <!-- Necesitas crear este archivo o asegurarte que existe -->
+
+<!-- SEGUNDO: Configuración de equipos -->
+<script src="config-teams.js"></script>
+
+<!-- TERCERO: Configuración de logos -->
+<script src="config-logos.js"></script>
+
+<!-- CUARTO: Utils (necesita Config) -->
+<script src="utils.js"></script>
+
+<!-- QUINTO: State Manager (usa Config y Utils) -->
+<script src="state-manager.js"></script>
+
+<!-- SEXTO: Error Handler (independiente) -->
+<script src="error-handler.js"></script>
+
+<!-- SÉPTIMO: Validators (usa Config) -->
+<script src="validators.js"></script>
+
+<!-- OCTAVO: Specialties Detector (usa Config) -->
+<script src="specialties-detector.js"></script>
+
+<!-- NOVENO: Render Helpers (usa todo lo anterior) -->
+<script src="render-helpers.js"></script>
+
+<!-- DÉCIMO: Fixes (debe ir ÚLTIMO, corrige todo) -->
+<script src="fixes.js"></script>
 </head>
 <body>
   <div class="app-container">
@@ -103,7 +134,6 @@
           <div id="error-log" class="tab-content" data-template="templates/error-log-tab.html"></div>
       </main>
 
-      <!-- Logo al final -->
       <div class="logos-container">
           <svg width="150" height="40" viewBox="0 0 145.94 39.05" xmlns="http://www.w3.org/2000/svg">
               <path fill="#ffffff" d="M42.24,12.37v1.93h6.91v15.25h4.21v-15.25h6.91v-3.88h-16.1l-1.93,1.95ZM92.06,20.31v1.87h4.24v2.73c-.53.38-1.13.67-1.8.86-.67.19-1.39.29-2.16.29-.84,0-1.61.15-2.32-.45-.71-.3-1.33-.72-1.84-1.27-.52-.55-.92-1.19-1.2-1.93-.28-.74-.42-1.54-.42-2.42v-.05c0-.82.14-1.59.42-2.31.28-.72.67-1.35,1.18-1.89.5-.54,1.08-.97,1.75-1.28.66-.32,1.38-.48,2.15-.48.55,0,1.05.05,1.5.14.46.09.88.22,1.27.38.39.16.77.36,1.13.60.25.16.49.34.74.54l2.94-2.97c-.47-.4-.96-.75-1.46-1.07-.53-.33-1.09-.60-1.70-.82-.60-.22-1.25-.39-1.95-.51-.70-.12-1.48-.18-2.34-.18-1.44,0-2.77.26-4,.78-1.23.52-2.29,1.23-3.18,2.13-.89.90-1.59,1.95-2.09,3.14-.50,1.19-.75,2.47-.75,3.84v-.05c0,1.42.25,2.73.74,3.94.49,1.20,1.18,2.24,2.06,3.12.88.87,1.94,1.56,3.17,2.05,1.23.49,2.59.74,4.09.74,1.75,0,3.30-.30,4.66-.89,1.36-.59,2.53-1.31,3.51-2.15v-8.31h-6.56l-1.74,1.76ZM68.15,21.8h9.02v-3.74h-9.02v-3.88h10.25v-3.74h-12.55l0.14,0.14v17.12h14.54v-3.74h-10.53v-4.02ZM114.24,10.43h-8.75v19.13h4.21v-6.12h3.31l4.10,6.12h2.57l1.39-1.40-3.71-5.43c1.22-.46,2.21-1.17,2.97-2.15.76-.97,1.13-2.24,1.13-3.79v-.05c0-1.82-.55-3.28-1.64-4.37-1.29-1.29-3.15-1.94-5.58-1.94ZM117.19,17.03c0,.82-.28,1.48-.83,1.98-.56.49-1.35.74-2.39.74h-4.26v-5.52h4.18c1.04,0,1.85.23,2.43.69.58.46.87,1.14.87,2.06v.05ZM136.7,10.29h-3.88l-8.20,19.27h4.29l1.75-4.29h8.09l1.75,4.29h1.97l1.70-1.72-7.47-17.55ZM132.16,21.58l2.54-6.20,2.54,6.20h-5.08Z"/>
@@ -111,7 +141,6 @@
           </svg>
       </div>
 
-      <!-- Mensaje de estado -->
       <div id="statusMessage" class="status-message"></div>
   </div>
 
@@ -120,38 +149,7 @@
   <input type="file" id="imageInput" accept="image/*" style="display: none;">
   <input type="file" id="placementImageInput" accept="image/*" style="display: none;">
 
-  <!-- NUESTROS MÓDULOS JS - ORDEN CORRECTO -->
-  <!-- PRIMERO: Configuración base -->
-  <script src="config.js"></script>
-  
-  <!-- SEGUNDO: Configuración de equipos -->
-  <script src="config-teams.js"></script>
-  
-  <!-- TERCERO: Configuración de logos -->
-  <script src="config-logos.js"></script>
-  
-  <!-- CUARTO: Utils (necesita Config) -->
-  <script src="utils.js"></script>
-  
-  <!-- QUINTO: State Manager (usa Config y Utils) -->
-  <script src="state-manager.js"></script>
-  
-  <!-- SEXTO: Error Handler (independiente) -->
-  <script src="error-handler.js"></script>
-  
-  <!-- SÉPTIMO: Validators (usa Config) -->
-  <script src="validators.js"></script>
-  
-  <!-- OCTAVO: Specialties Detector (usa Config) -->
-  <script src="specialties-detector.js"></script>
-  
-  <!-- NOVENO: Render Helpers (usa todo lo anterior) -->
-  <script src="render-helpers.js"></script>
-  
-  <!-- DÉCIMO: Fixes (debe ir ÚLTIMO, corrige todo) -->
-  <script src="fixes.js"></script>
-
-  <!-- ÚNICO ARCHIVO PRINCIPAL - TODA LA LÓGICA ESTÁ AQUÍ -->
+  <!-- JavaScript principal con todas las correcciones -->
   <script src="app.js"></script>
 
 </body>
