--- a/index.html
+++ b/index.html
@@ -13,26 +13,40 @@
   <!-- 2. LIBRERÍAS EXTERNAS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   
-  <!-- 3. NUESTROS MÓDULOS -->
-  <script src="config.js"></script>
-  <script src="config-teams.js"></script>
-  <script src="config-logos.js"></script>
-  <script src="utils.js"></script>
-  <script src="state-manager.js"></script>
-  <script src="error-handler.js"></script>
-  <script src="validators.js"></script>
-  <script src="specialties-detector.js"></script>
-  <script src="render-helpers.js"></script>
-  <script src="fixes.js"></script>
-  
-  <!-- 4. EL GENERADOR DE PDF (ANTES DEL SCRIPT PRINCIPAL) -->
-  <script src="pdf-generator.js"></script>
-  
+ <!-- 3. NUESTROS MÓDULOS - ORDEN CORREGIDO -->
+<!-- PRIMERO: Configuración base -->
+<script src="config.js"></script> <!-- Necesitas crear este archivo o asegurarte que existe -->
+
+<!-- SEGUNDO: Configuración de equipos -->
+<script src="config-teams.js"></script>
+
+<!-- TERCERO: Configuración de logos -->
+<script src="config-logos.js"></script>
+
+<!-- CUARTO: Utils (necesita Config) -->
+<script src="utils.js"></script>
+
+<!-- QUINTO: State Manager (usa Config y Utils) -->
+<script src="state-manager.js"></script>
+
+<!-- SEXTO: Error Handler (independiente) -->
+<script src="error-handler.js"></script>
+
+<!-- SÉPTIMO: Validators (usa Config) -->
+<script src="validators.js"></script>
+
+<!-- OCTAVO: Specialties Detector (usa Config) -->
+<script src="specialties-detector.js"></script>
+
+<!-- NOVENO: Render Helpers (usa todo lo anterior) -->
+<script src="render-helpers.js"></script>
+
+<!-- DÉCIMO: Fixes (debe ir ÚLTIMO, corrige todo) -->
+<script src="fixes.js"></script>
 </head>
 <body>
   <div class="app-container">
@@ -42,7 +56,10 @@
       <header class="app-header">
           <div class="logo-section">
               <div class="app-logo">
-                  <!-- SVG Logo -->
+                  <svg viewBox="0 0 145.94 39.05" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M42.24,12.37v1.93h6.91v15.25h4.21v-15.25h6.91v-3.88h-16.1l-1.93,1.95ZM92.06,20.31v1.87h4.24v2.73c-.53.38-1.13.67-1.8.86-.67.19-1.39.29-2.16.29-.84,0-1.61.15-2.32-.45-.71-.3-1.33-.72-1.84-1.27-.52-.55-.92-1.19-1.2-1.93-.28-.74-.42-1.54-.42-2.42v-.05c0-.82.14-1.59.42-2.31.28-.72.67-1.35,1.18-1.89.5-.54,1.08-.97,1.75-1.28.66-.32,1.38-.48,2.15-.48.55,0,1.05.05,1.5.14.46.09.88.22,1.27.38.39.16.77.36,1.13.60.25.16.49.34.74.54l2.94-2.97c-.47-.4-.96-.75-1.46-1.07-.53-.33-1.09-.60-1.70-.82-.60-.22-1.25-.39-1.95-.51-.70-.12-1.48-.18-2.34-.18-1.44,0-2.77.26-4,.78-1.23.52-2.29,1.23-3.18,2.13-.89.90-1.59,1.95-2.09,3.14-.50,1.19-.75,2.47-.75,3.84v-.05c0,1.42.25,2.73.74,3.94.49,1.20,1.18,2.24,2.06,3.12.88.87,1.94,1.56,3.17,2.05,1.23.49,2.59.74,4.09.74,1.75,0,3.30-.30,4.66-.89,1.36-.59,2.53-1.31,3.51-2.15v-8.31h-6.56l-1.74,1.76ZM68.15,21.8h9.02v-3.74h-9.02v-3.88h10.25v-3.74h-12.55l0.14,0.14v17.12h14.54v-3.74h-10.53v-4.02ZM114.24,10.43h-8.75v19.13h4.21v-6.12h3.31l4.10,6.12h2.57l1.39-1.40-3.71-5.43c1.22-.46,2.21-1.17,2.97-2.15.76-.97,1.13-2.24,1.13-3.79v-.05c0-1.82-.55-3.28-1.64-4.37-1.29-1.29-3.15-1.94-5.58-1.94ZM117.19,17.03c0,.82-.28,1.48-.83,1.98-.56.49-1.35.74-2.39.74h-4.26v-5.52h4.18c1.04,0,1.85.23,2.43.69.58.46.87,1.14.87,2.06v.05ZM136.7,10.29h-3.88l-8.20,19.27h4.29l1.75-4.29h8.09l1.75,4.29h1.97l1.70-1.72-7.47-17.55ZM132.16,21.58l2.54-6.20,2.54,6.20h-5.08Z"/>
+                      <g><polygon points="7.44 31.38 6.59 32.24 6.88 33.39 8.03 33.68 8.89 32.83 8.59 31.68 7.44 31.38"/><polygon points="6.79 28.67 7.94 28.97 10.41 26.5 10.11 25.35 8.96 25.05 6.49 27.52 6.79 28.67"/><polygon points="10.54 14.61 9.4 14.31 6.93 16.78 7.23 17.93 8.37 18.23 10.85 15.76 10.54 14.61"/><polygon points="26.38 22.79 25.06 24.11 25.36 25.26 26.5 25.56 27.82 24.24 27.52 23.09 26.38 22.79"/><path d="M21.9,36.93l.30,1.15,1.15.30.85-.85-.30-1.15-1.15-.30-.85.85ZM18.01,29.21l-.30-1.15.85-.85,1.15.30.30,1.15-.85.85-1.15-.30ZM18.83,19.56l-.30-1.15,1.50-1.50,1.15.30.30,1.15-1.50,1.50-1.15-.30ZM20.85,14.61l-.30-1.15,1.50-1.50,1.15.30.30,1.15-1.50,1.50-1.15-.30ZM14.33,15.34l-.30-1.14,3.78-3.68,1.14.30.30,1.14-3.78,3.68-1.15-.30ZM24.21,10.68l-.30-1.15,2.17-2.17,1.14.30.30,1.14-2.17,2.17-1.14-.30ZM20.59,9.12l-.30-1.15.85-.85,1.15.30.30,1.15-.85.85-1.15-.30ZM15.06,8.82l-.30-1.15,1.50-1.50,1.15.30.30,1.15-1.50,1.50-1.15-.30ZM25.51,0l-4.90,4.90-1.14-.30-.30-1.14,3.46-3.46H0v9.55h4.54l-1.67,1.67.30,1.14,1.15.30,3.12-3.12h.02l2.59-2.59,1.14.30.30,1.14-.57.57-1.81,1.78.30,1.15,1.15.30,2.50-2.45v8.41l-3.99,3.99.30,1.15,1.15.30,4.62-4.62,1.07.28.30,1.15-1.42,1.42-.93.93-.84.84-1.78,1.78.30,1.15,1.14.30,3.56-3.56.27-.27,1.14.30.30,1.14-4.64,4.64h-.03s-2.52,2.51-2.52,2.51l.31,1.16,1.17.31,2.52-2.52h0s.30-.32.30-.32l1.14.30.30,1.15-3.75,3.75h0s-2.17,2.18-2.17,2.18l.30,1.14,1.15.30,6.35-6.35,1.14.30.30,1.15-2.82,2.77.30,1.14,1.15.30,5.15-5.10v-2.89h0s-1.24,1.24-1.24,1.24l-1.15-.30-.30-1.14,3.43-3.41-.30-1.15-.45-.12-.71-.19-1.05,1.05-1.14-.30-.30-1.14,6.16-6.31-.30-1.15-1.14-.30-1.51,1.51v-4.34l5.25-4.76h7.28V0h-10.92Z"/></g>
+                  </svg>
               </div>
               <div>
                   <h1 class="app-title">Technical Spec Manager</h1>
@@ -54,12 +71,14 @@
                   </button>
               </div>
           </div>
+
           <div class="client-section">
               <span class="client-label">CUSTOMER / CLIENTE:</span>
               <div class="client-logo-wrapper">
                   <img id="logoCliente" alt="Logo del cliente" style="max-height: 35px; max-width: 120px; display: none;">
               </div>
           </div>
+
           <div class="header-actions">
               <div class="folder-input-container">
                   <span class="client-label" style="font-size: 0.9rem; color: White;"># FOLDER:</span>
@@ -74,16 +93,16 @@
       <!-- ========================================================= -->
       <nav class="app-nav no-print">
           <ul class="nav-tabs">
-              <li class="nav-tab active" data-tab="dashboard">
+              <li class="nav-tab active" onclick="showTab('dashboard')">
                   <i class="fas fa-tachometer-alt"></i> Dashboard
               </li>
-              <li class="nav-tab" data-tab="spec-creator">
+              <li class="nav-tab" onclick="showTab('spec-creator')">
                   <i class="fas fa-file-alt"></i> Crear Spec
               </li>
-              <li class="nav-tab" data-tab="saved-specs">
+              <li class="nav-tab" onclick="showTab('saved-specs')">
                   <i class="fas fa-database"></i> Guardadas
               </li>
-              <li class="nav-tab" data-tab="error-log">
+              <li class="nav-tab" onclick="showTab('error-log')">
                   <i class="fas fa-exclamation-triangle"></i> Log de Errores
               </li>
           </ul>
@@ -92,10 +111,34 @@
       <!-- ========================================================= -->
       <!-- MAIN CONTENT -->
       <!-- ========================================================= -->
-      <main id="app-content" class="app-main"></main>
+      <main class="app-main">
+
+          <!-- ===================================================== -->
+          <!-- TAB: DASHBOARD -->
+          <!-- ===================================================== -->
+          <div id="dashboard" class="tab-content active" data-template="templates/dashboard-tab.html"></div>
+
+          <!-- ===================================================== -->
+          <!-- TAB: SPEC CREATOR -->
+          <!-- ===================================================== -->
+          <div id="spec-creator" class="tab-content" data-template="templates/spec-creator-tab.html"></div>
+
+          <!-- ===================================================== -->
+          <!-- TAB: SPECS GUARDADAS -->
+          <!-- ===================================================== -->
+          <div id="saved-specs" class="tab-content" data-template="templates/saved-specs-tab.html"></div>
+
+          <!-- ===================================================== -->
+          <!-- TAB: LOG DE ERRORES -->
+          <!-- ===================================================== -->
+          <div id="error-log" class="tab-content" data-template="templates/error-log-tab.html"></div>
+      </main>
 
       <div class="logos-container">
-          <!-- SVG Logo -->
+          <svg width="150" height="40" viewBox="0 0 145.94 39.05" xmlns="http://www.w3.org/2000/svg">
+              <path fill="#ffffff" d="M42.24,12.37v1.93h6.91v15.25h4.21v-15.25h6.91v-3.88h-16.1l-1.93,1.95ZM92.06,20.31v1.87h4.24v2.73c-.53.38-1.13.67-1.8.86-.67.19-1.39.29-2.16.29-.84,0-1.61.15-2.32-.45-.71-.3-1.33-.72-1.84-1.27-.52-.55-.92-1.19-1.2-1.93-.28-.74-.42-1.54-.42-2.42v-.05c0-.82.14-1.59.42-2.31.28-.72.67-1.35,1.18-1.89.5-.54,1.08-.97,1.75-1.28.66-.32,1.38-.48,2.15-.48.55,0,1.05.05,1.5.14.46.09.88.22,1.27.38.39.16.77.36,1.13.60.25.16.49.34.74.54l2.94-2.97c-.47-.4-.96-.75-1.46-1.07-.53-.33-1.09-.60-1.70-.82-.60-.22-1.25-.39-1.95-.51-.70-.12-1.48-.18-2.34-.18-1.44,0-2.77.26-4,.78-1.23.52-2.29,1.23-3.18,2.13-.89.90-1.59,1.95-2.09,3.14-.50,1.19-.75,2.47-.75,3.84v-.05c0,1.42.25,2.73.74,3.94.49,1.20,1.18,2.24,2.06,3.12.88.87,1.94,1.56,3.17,2.05,1.23.49,2.59.74,4.09.74,1.75,0,3.30-.30,4.66-.89,1.36-.59,2.53-1.31,3.51-2.15v-8.31h-6.56l-1.74,1.76ZM68.15,21.8h9.02v-3.74h-9.02v-3.88h10.25v-3.74h-12.55l0.14,0.14v17.12h14.54v-3.74h-10.53v-4.02ZM114.24,10.43h-8.75v19.13h4.21v-6.12h3.31l4.10,6.12h2.57l1.39-1.40-3.71-5.43c1.22-.46,2.21-1.17,2.97-2.15.76-.97,1.13-2.24,1.13-3.79v-.05c0-1.82-.55-3.28-1.64-4.37-1.29-1.29-3.15-1.94-5.58-1.94ZM117.19,17.03c0,.82-.28,1.48-.83,1.98-.56.49-1.35.74-2.39.74h-4.26v-5.52h4.18c1.04,0,1.85.23,2.43.69.58.46.87,1.14.87,2.06v.05ZM136.7,10.29h-3.88l-8.20,19.27h4.29l1.75-4.29h8.09l1.75,4.29h1.97l1.70-1.72-7.47-17.55ZM132.16,21.58l2.54-6.20,2.54,6.20h-5.08Z"/>
+              <g><polygon fill="#ffffff" points="7.44 31.38 6.59 32.24 6.88 33.39 8.03 33.68 8.89 32.83 8.59 31.68 7.44 31.38"/><polygon fill="#ffffff" points="6.79 28.67 7.94 28.97 10.41 26.5 10.11 25.35 8.96 25.05 6.49 27.52 6.79 28.67"/><polygon fill="#ffffff" points="10.54 14.61 9.4 14.31 6.93 16.78 7.23 17.93 8.37 18.23 10.85 15.76 10.54 14.61"/><polygon fill="#ffffff" points="26.38 22.79 25.06 24.11 25.36 25.26 26.5 25.56 27.82 24.24 27.52 23.09 26.38 22.79"/><path fill="#ffffff" d="M21.9,36.93l.30,1.15,1.15.30.85-.85-.30-1.15-1.15-.30-.85.85ZM18.01,29.21l-.30-1.15.85-.85,1.15.30.30,1.15-.85.85-1.15-.30ZM18.83,19.56l-.30-1.15,1.50-1.50,1.15.30.30,1.15-1.50,1.50-1.15-.30ZM20.85,14.61l-.30-1.15,1.50-1.50,1.15.30.30,1.15-1.50,1.50-1.15-.30ZM14.33,15.34l-.30-1.14,3.78-3.68,1.14.30.30,1.14-3.78,3.68-1.15-.30ZM24.21,10.68l-.30-1.15,2.17-2.17,1.14.30.30,1.14-2.17,2.17-1.14-.30ZM20.59,9.12l-.30-1.15.85-.85,1.15.30.30,1.15-.85.85-1.15-.30ZM15.06,8.82l-.30-1.15,1.50-1.50,1.15.30.30,1.15-1.50,1.50-1.15-.30ZM25.51,0l-4.90,4.90-1.14-.30-.30-1.14,3.46-3.46H0v9.55h4.54l-1.67,1.67.30,1.14,1.15.30,3.12-3.12h.02l2.59-2.59,1.14.30.30,1.14-.57.57-1.81,1.78.30,1.15,1.15.30,2.50-2.45v8.41l-3.99,3.99.30,1.15,1.15.30,4.62-4.62,1.07.28.30,1.15-1.42,1.42-.93.93-.84.84-1.78,1.78.30,1.15,1.14.30,3.56-3.56.27-.27,1.14.30.30,1.14-4.64,4.64h-.03s-2.52,2.51-2.52,2.51l.31,1.16,1.17.31,2.52-2.52h0s.30-.32.30-.32l1.14.30.30,1.15-3.75,3.75h0s-2.17,2.18-2.17,2.18l.30,1.14,1.15.30,6.35-6.35,1.14.30.30,1.15-2.82,2.77.30,1.14,1.15.30,5.15-5.10v-2.89h0s-1.24,1.24-1.24,1.24l-1.15-.30-.30-1.14,3.43-3.41-.30-1.15-.45-.12-.71-.19-1.05,1.05-1.14-.30-.30-1.14,6.16-6.31-.30-1.15-1.14-.30-1.51,1.51v-4.34l5.25-4.76h7.28V0h-10.92Z"/></g>
+          </svg>
       </div>
 
       <div id="statusMessage" class="status-message"></div>
@@ -106,7 +149,7 @@
   <input type="file" id="imageInput" accept="image/*" style="display: none;">
   <input type="file" id="placementImageInput" accept="image/*" style="display: none;">
 
-  <!-- 5. SCRIPT PRINCIPAL DE LA APLICACIÓN (AL FINAL) -->
+  <!-- JavaScript principal con todas las correcciones -->
   <script src="app.js"></script>
 
 </body>
