--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                   <div class="card-header">
                       <h2 class="card-title"><i class="fas fa-layer-group"></i> Placements</h2>
                       <div class="card-actions">
-                          <button type="button" class="btn btn-primary"><i class="fas fa-plus"></i> Añadir Placement</button>
+                          <button type="button" id="add-placement-btn" class="btn btn-primary"><i class="fas fa-plus"></i> Añadir Placement</button>
                       </div>
                   </div>
                   <div class="card-body">
@@ -216,10 +216,10 @@
                   </div>
                   <div class="card-body">
                       <div class="global-actions">
-                          <button type="button" class="btn btn-success"><i class="fas fa-file-pdf"></i> Exportar a PDF</button>
-                          <button type="button" class="btn btn-secondary"><i class="fas fa-file-excel"></i> Exportar a Excel</button>
-                          <button type="button" class="btn btn-danger"><i class="fas fa-trash"></i> Limpiar Formulario</button>
-                           <button type="button" class="btn btn-primary"><i class="fas fa-file-archive"></i> Descargar Proyecto (.zip)</button>
+                          <button type="button" id="export-pdf-btn" class="btn btn-success"><i class="fas fa-file-pdf"></i> Exportar a PDF</button>
+                          <button type="button" id="export-excel-btn" class="btn btn-secondary"><i class="fas fa-file-excel"></i> Exportar a Excel</button>
+                          <button type="button" id="clear-form-btn" class="btn btn-danger"><i class="fas fa-trash"></i> Limpiar Formulario</button>
+                           <button type="button" id="download-zip-btn" class="btn btn-primary"><i class="fas fa-file-archive"></i> Descargar Proyecto (.zip)</button>
                       </div>
                   </div>
               </div>
