Add professional PDF generator with safe fallback

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <!-- SEGUNDO: Configuración de equipos -->
 <script src="config-teams.js"></script>
+  <script src="config-color.js"></script>
 
 <!-- TERCERO: Configuración de logos -->
 <script src="config-logos.js"></script>
@@ -151,6 +152,7 @@
 
   <!-- JavaScript principal con todas las correcciones -->
   <script src="app.js"></script>
+  <script src="pdf-generator-mejorado.js"></script>
 
 </body>
 </html>
