Add pdf-diagnostic.js script to index.html

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
   <!-- JavaScript principal con todas las correcciones -->
   <script src="app.js"></script>
   <script src="pdf-generator-mejorado.js"></script>
+  <script src="pdf-diagnostic.js"></script>
 
 </body>
 </html>
