--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
 
   <!-- JavaScript principal con todas las correcciones -->
   <script src="app.js"></script>
-  <script src="pdf-generator-mejorado.js"></script>
-  <script src="pdf-diagnostic.js"></script>
+  <script src="pdf-generator-pro.js"></script>
 
 </body>
 </html>
