--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
   
   <!-- 2. LIBRERÍAS EXTERNAS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   
@@ -50,7 +48,7 @@
 <script src="fixes.js"></script>
 </head>
 <body>
-  <div class="app-container">
+  <div id="pdf-render" class="app-container">
       <!-- ========================================================= -->
       <!-- HEADER -->
       <!-- ========================================================= -->
@@ -152,7 +150,6 @@
 
   <!-- JavaScript principal con todas las correcciones -->
   <script src="app.js"></script>
-  <script src="pdf-generator-mejorado.js"></script>
 
 </body>
 </html>
