Switch export action to download styled spec HTML file

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
   <input type="file" id="placementImageInput" accept="image/*" style="display: none;">
 
   <!-- JavaScript principal con todas las correcciones -->
+  <script src="pdf-generator-mejorado.js"></script>
   <script src="app.js"></script>
 
 </body>
