--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
  <!-- 3. NUESTROS MÓDULOS - ORDEN CORREGIDO -->
 <!-- PRIMERO: Configuración base -->
-<script src="config.js"></script> <!-- Necesitas crear este archivo o asegurarte que existe -->
+<script src="config.js"></script> 
 
 <!-- SEGUNDO: Configuración de equipos -->
 <script src="config-teams.js"></script>
@@ -151,6 +151,8 @@
   <!-- JavaScript principal con todas las correcciones -->
   <script src="pdf-generator-mejorado.js"></script>
   <script src="app.js"></script>
+  <script src="config-schools.js"></script>
+<script src="placements-autocomplete.js"></script>
 
 </body>
 </html>
