--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
   <script src="specialties-detector.js"></script>
   <script src="render-helpers.js"></script>
   
-  <!-- 5. GENERADORES -->
+  <!-- 5. MOTOR DE REGLAS (NUEVO) -->
+  <script src="core/rulesEngine.js"></script>
+  
+  <!-- 6. GENERADOR HTML (SOLO EL MEJORADO) -->
   <script src="pdf-generator-mejorado.js"></script>
   
-  <!-- 6. APLICACIÓN PRINCIPAL (SIEMPRE AL FINAL) -->
+  <!-- 7. APLICACIÓN PRINCIPAL (SIEMPRE AL FINAL) -->
   <script src="app.js"></script>
   
-  <!-- 7. FIXES (OPCIONAL, DESPUÉS DE APP.JS) -->
+  <!-- 8. FIXES (OPCIONAL, DESPUÉS DE APP.JS) -->
   <script src="fixes.js"></script>
 </head>
 <body>
