--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
   <!-- JavaScript principal con todas las correcciones -->
   <script src="pdf-generator-mejorado.js"></script>
   <script src="app.js"></script>
+  <script src="excel-automation.js"></script> 
   <script src="config-schools.js"></script>
 <script src="placements-autocomplete.js"></script>
 
