--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
   <script src="pdf-generator-mejorado.js"></script>
   <script src="app.js"></script>
   <script src="excel-automation.js"></script> 
+  <script src="sequence-automation.js"></script>  
   <script src="config-schools.js"></script>
 <script src="placements-autocomplete.js"></script>
 
